--- a/about-us.htm
+++ b/about-us.htm
@@ -139,16 +139,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share.htm" title="9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-free-node-subscribe-links.htm" title="9月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-23-free-subscribe-node.htm" title="9月23日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月23日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" title="8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-node-share-links.htm" title="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-subscribe-node.htm" title="9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -160,7 +160,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
