--- a/client.htm
+++ b/client.htm
@@ -290,16 +290,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-subscribe-node.htm" title="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-node-subscribe.htm" title="9月17日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月17日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share-links.htm" title="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" title="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-7-node-share.htm" title="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-high-speed-nodes.htm" title="9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-subscribe-node.htm" title="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-6-free-subscribe-node.htm" title="9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-15-free-high-speed-nodes.htm" title="9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月15日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-141779.htm" title="路由器科学上网全攻略：解锁全球网络自由之旅">路由器科学上网全攻略：解锁全球网络自由之旅</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share-links.htm" title="9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-node-subscribe.htm" title="10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -311,7 +311,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
