--- a/date/2025-08/index.htm
+++ b/date/2025-08/index.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-free-subscribe-node.htm" title="9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" title="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-23-free-subscribe-node.htm" title="9月23日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月23日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-142499.htm" title="深入探索Vmess订阅链：从原理到实战的全方位指南">深入探索Vmess订阅链：从原理到实战的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-2-free-node-subscribe.htm" title="10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" title="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-20-free-node-subscribe-links.htm" title="9月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-24-free-subscribe-node.htm" title="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
+                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" title="8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-8-free-subscribe-node.htm" title="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
