--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -124,6 +124,90 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-12">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、日本、韩国、香港、加拿大、美国、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-11">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、加拿大、日本、欧洲、韩国、新加坡、美国等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-10">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-10-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-10-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、欧洲、日本、香港、加拿大、韩国、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-09">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-8-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、香港、美国、新加坡、韩国、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-7-node-share.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-7-node-share.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、韩国、新加坡、美国、日本、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-06">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-6-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -180,92 +264,8 @@
                                     这一次的节点更新覆盖了香港、新加坡、美国、韩国、日本、加拿大、欧洲等地区,最高速度可达22 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-02">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月2日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、美国、欧洲、新加坡、韩国、香港、日本等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、加拿大、欧洲、香港、韩国、日本、新加坡等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-31">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-31-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-31-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、日本、韩国、香港、欧洲、新加坡、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-30">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、加拿大、日本、韩国、新加坡、欧洲、美国等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-29">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-29-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、新加坡、韩国、加拿大、日本、欧洲、香港等地区,最高速度可达22 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-08-28">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-8-28-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">8月28日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了韩国、日本、美国、新加坡、欧洲、加拿大、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
-                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-145753.htm" title="迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略">迅游加速器：解锁全球网络的智能钥匙与科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-19-node-share-links.htm" title="9月19日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月19日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-145028.htm" title="手机变身为代理服务器：详解v2rayNg网络共享全攻略">手机变身为代理服务器：详解v2rayNg网络共享全攻略</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-25-node-share.htm" title="8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月25日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-24-free-subscribe-node.htm" title="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-26-node-share.htm" title="8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月26日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-5-node-share-links.htm" title="9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月5日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-24-free-high-speed-nodes.htm" title="9月24日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月24日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143938.htm" title="深入解析Shadowrocket延迟问题：从诊断到优化的完整指南">深入解析Shadowrocket延迟问题：从诊断到优化的完整指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-3-free-high-speed-nodes.htm" title="9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">9月3日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-145391.htm" title="安卓Clash深度指南：从零开始掌握高效代理工具">安卓Clash深度指南：从零开始掌握高效代理工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-node-share-links.htm" title="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-142855.htm" title="乐高Clash终极指南：从创意搭建到战术制胜的艺术">乐高Clash终极指南：从创意搭建到战术制胜的艺术</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
