--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -3,15 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io/free-nodes/page-5.htm" />
-    <title>免费节点 - Sockscap64免费机场节点分享官网 - 第4页</title>
+    <title>Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页</title>
+        <meta name="keywords" content="Sockscap64, 免费节点, V2ray订阅, Clash节点, 科学上网" />
+        <meta name="description" content="Sockscap64提供精选免费节点，支持V2ray和Clash订阅，保证节点稳定高速，每日更新，让科学上网更加顺畅。" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io/free-nodes/page-5.htm" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="免费节点 - Sockscap64免费机场节点分享官网 - 第4页" />
+    <meta property="og:title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
+        <meta property="og:description" content="Sockscap64提供精选免费节点，支持V2ray和Clash订阅，保证节点稳定高速，每日更新，让科学上网更加顺畅。" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -23,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免费节点 - Sockscap64免费机场节点分享官网 - 第4页">
+    <meta name="apple-mobile-web-app-title" content="Sockscap64 免费节点平台 | 高速稳定V2ray与Clash节点 - Sockscap64免费机场节点分享官网 - 第4页">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -72,7 +75,7 @@
                         <div class="col-md-4 col-sm-4 col-xs-6">
                             <div class="logo">
                                 <a href="/">
-                                                                        <span>Sockscap64</span>
+                                                                        <span>Sockscap64 节点平台</span>
                                                                 </div> <!-- /.logo -->
                         </div> <!-- /.col-md-4 -->
                         <div class="col-md-8 col-sm-8 col-xs-6">
@@ -121,46 +124,46 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-08">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-23">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-8-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-8-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-23-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了日本、韩国、加拿大、香港、欧洲、新加坡、美国等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、香港、新加坡、美国、韩国、日本等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-07">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-22">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-7-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-7-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月7日→19.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-22-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月22日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了香港、加拿大、新加坡、欧洲、美国、韩国、日本等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了韩国、加拿大、美国、欧洲、新加坡、日本、香港等地区,最高速度可达22 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-07-06">
+                                                <div class="row item xcblog-blog-item" data-date="2025-08-21">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-7-6-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-7-6-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">7月6日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、韩国、欧洲等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了香港、日本、欧洲、美国、韩国、新加坡、加拿大等地区,最高速度可达22.2 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
                         
@@ -173,16 +176,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-7-28-node-share.htm" title="7月28日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月28日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-1-free-node-subscribe.htm" title="8月1日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">8月1日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-8-node-share.htm" title="7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">7月8日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-4-free-subscribe-node.htm" title="8月4日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月4日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-11-free-node-subscribe-links.htm" title="7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">7月11日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-15-free-high-speed-nodes.htm" title="7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">7月15日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-10-free-node-subscribe-links.htm" title="7月10日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址">7月10日→22.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-3-free-node-subscribe-links.htm" title="8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">8月3日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-5-free-node-subscribe-links.htm" title="8月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-7-25-node-share.htm" title="7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">7月25日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-17-free-node-subscribe.htm" title="9月17日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月17日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-18-free-high-speed-nodes.htm" title="9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月18日→20.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-29-node-share-links.htm" title="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-30-free-high-speed-nodes.htm" title="8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月30日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-19-node-share-links.htm" title="9月19日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月19日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-141420.htm" title="深度解析v2rayng：常见问题全攻略与优化指南">深度解析v2rayng：常见问题全攻略与优化指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-10-node-share-links.htm" title="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-143570.htm" title="从零开始掌握Clash：全网最详细的下载安装与使用指南">从零开始掌握Clash：全网最详细的下载安装与使用指南</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-12-free-subscribe-node.htm" title="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -194,10 +197,13 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
             </li>
                     </ul>
     </div>
@@ -211,7 +217,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                                        <p>
+                                        <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
@@ -222,7 +229,7 @@
                         <a href="/privacy.htm">隐私申明</a> |
                         <a href="/sitemap.xml">网站地图</a>
                     </p>
-                    <p>Sockscap64免费机场节点分享官网 版权所有 Powered by WordPress</p>
+                                        <p>Sockscap64免费机场节点分享官网 版权所有 Powered by WordPress</p>
                 </div> <!-- /.col-md-6 -->
                 <div class="col-md-4 col-sm-4 col-xs-12">
                     <div class="go-top">
