--- a/index.html
+++ b/index.html
@@ -124,6 +124,90 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-2-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-2-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、韩国、新加坡、加拿大、日本、欧洲等地区,最高速度可达21.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-1-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-1-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、加拿大、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-30">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、日本、美国、加拿大、欧洲、香港等地区,最高速度可达20.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-29-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-29-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、香港、韩国、欧洲、加拿大、美国、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-28-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9be0540ae1583a31777e1cff7d530a33.webp" alt="9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-28-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、美国、香港、新加坡、加拿大、日本、欧洲等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-09-27">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-9-27-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="9月27日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-9-27-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">9月27日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、美国、日本、韩国、香港、加拿大、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-09-26">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-9-26-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -320,90 +404,6 @@
                                     这一次的节点更新覆盖了加拿大、日本、韩国、美国、新加坡、香港、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-12">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月12日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、日本、韩国、香港、加拿大、美国、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-11">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-11-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、加拿大、日本、欧洲、韩国、新加坡、美国等地区,最高速度可达22.9 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-10">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-10-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-10-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月10日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、欧洲、日本、香港、加拿大、韩国、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-09">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-9-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、美国、韩国、香港、日本、加拿大、新加坡等地区,最高速度可达19.4 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-08">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-8-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-8-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月8日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、加拿大、香港、美国、新加坡、韩国、日本等地区,最高速度可达18.1 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-09-07">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-9-7-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-9-7-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">9月7日→19.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、加拿大、韩国、新加坡、美国、日本、香港等地区,最高速度可达19.6 M/S。只需复制下方的Clash节点、V2ray节点、Singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -413,16 +413,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-29-free-node-subscribe.htm" title="8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">8月29日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-node-share-links.htm" title="9月21日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月21日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-141134.htm" title="虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验">虚实交融的未来战场：Verge Clash如何重塑数字时代的对抗体验</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-31-free-subscribe-node.htm" title="8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月31日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-143216.htm" title="突破网络封锁：V2Ray高效连接全攻略与深度解析">突破网络封锁：V2Ray高效连接全攻略与深度解析</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-8-23-free-subscribe-node.htm" title="8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">8月23日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-4-node-share-links.htm" title="9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月4日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-13-free-high-speed-nodes.htm" title="9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月13日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-22-free-subscribe-node.htm" title="9月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">9月22日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-1-node-share-links.htm" title="10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-1-free-node-subscribe-links.htm" title="9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月1日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-146488.htm" title="突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用">突破网络边界：深度剖析广东朱先生科学上网技术的原理与应用</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-8-21-free-high-speed-nodes.htm" title="8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址">8月21日→22.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-8-24-free-subscribe-node.htm" title="8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">8月24日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-11-node-share-links.htm" title="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-26-free-subscribe-node.htm" title="9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">9月26日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -434,7 +434,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
